--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         <button ng-click="setCurrentActivity(activity)" class="button button-xlarge button-{{activity.cssClass}}" ng-class="{'is-active': currentActivity==activity}">{{activity.name}}</button>
       </li>
     </ul>
-    <div class="j-flip-clock"></div>
+    <div ng-flip-clock></div>
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/FlipClock/compiled/flipclock.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="js/modules.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/factories.js"></script>
+    <script src="js/directives.js"></script>
   </body>
 </html>
