--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="css/obvious-buttons.css">
     <link rel="stylesheet" href="bower_components/FlipClock/compiled/flipclock.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,700">
   </head>
@@ -23,6 +24,11 @@
       </li>
     </ul>
     <div ng-flip-clock></div>
+    <ul class="menu-icons-panel">
+      <li><a class="is-active" href=""><i class="fa fa-clock-o fa-2x"></i></a></li>
+      <li><a href=""><i class="fa fa-bar-chart-o fa-2x"></i></a></li>
+      <li><a href=""><i class="fa fa-gear fa-2x"></i></a></li>
+    </ul>
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/FlipClock/compiled/flipclock.js"></script>
     <script src="bower_components/angular/angular.js"></script>
