Add acrivity settings

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,700">
   </head>
-  <body class="bg-{{currentActivity.cssClass || 'default'}}">
+  <body class="bg-{{currentActivity.color || 'default'}}">
     <header class="header">
       <h1 class="header-title">ng-work-time-tracker</h1>
       <p class="header-desctiption">Simple time tracker that makes it easy to record what are you doing at office</p>
