Add custom filter

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
     <script src="app/directives/flipClock.js"></script>
 
+    <script src="app/filters/timeDuration.js"></script>
+
     <script src="app/services/activities.js"></script>
     <script src="app/services/flipClock.js"></script>
   </body>
