Use angular-flip-clock instead of FlipClock.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/obvious-buttons.css">
-    <link rel="stylesheet" href="bower_components/FlipClock/compiled/flipclock.css">
+    <link rel="stylesheet" href="bower_components/angular-flip-clock/dist/angular-flip-clock.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="bower_components/animate.css/animate.css">
     <link rel="stylesheet" href="css/main.css">
@@ -26,25 +26,19 @@
       <li><a tooltip="Settings" ng-class="navClass('settings')" href="#/settings"><i class="fa fa-gear"></i></a></li>
     </ul>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/FlipClock/compiled/flipclock.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-flip-clock/dist/angular-flip-clock.full.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
     <script src="app/app.js"></script>
-
     <script src="app/controllers/nav.js"></script>
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/statistics.js"></script>
     <script src="app/controllers/settings.js"></script>
-
-    <script src="app/directives/flipClock.js"></script>
-
     <script src="app/filters/timeDuration.js"></script>
-
     <script src="app/services/activities.js"></script>
-    <script src="app/services/flipClock.js"></script>
   </body>
 </html>
