Use more precise time tracking lib instead of

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <navigation></navigation>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/tock/tock.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
