Move Activity to separate file

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="app/components/settings/settings.js"></script>
     <script src="app/directives/navigation/navigation.js"></script>
     <script src="app/filters/timeDuration.js"></script>
+    <script src="app/models/activity.js"></script>
     <script src="app/services/activities.js"></script>
   </body>
 </html>
