Use separate angualr module for each file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="workTimeTrackerApp">
+<html ng-app="workTimeTracker">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,12 +33,12 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
-    <script src="app/app.js"></script>
+    <script src="app/work-time-tracker.js"></script>
     <script src="app/components/main/main.js"></script>
     <script src="app/components/statistics/statistics.js"></script>
     <script src="app/components/settings/settings.js"></script>
     <script src="app/directives/navigation/navigation.js"></script>
-    <script src="app/filters/timeDuration.js"></script>
+    <script src="app/filters/time-duration.js"></script>
     <script src="app/models/activity.js"></script>
     <script src="app/services/activities.js"></script>
   </body>
